# airflow_workshop

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test.py
dags/: get_data.py  stg_to_dds.py
json/: academic_wp_description.json
sql/: dds_ddl.sql  stg_ddl.sql
unused_dags/: cdm.sql  get_dics_by_year.py  get_evaluation_tools.py  get_up_descriptions.py  get_up_from_isu.py  get_wp_by_year.py  get_wp_detail.py  osop.sql
